--- a/ia/conceptos.html
+++ b/ia/conceptos.html
@@ -70,7 +70,7 @@
                 <p>El proceso de Backpropagation se repite a lo largo de múltiples iteraciones (épocas) de entrenamiento. Cada vez que los datos pasan a través de la red, los pesos se ajustan para mejorar la precisión de las predicciones. Con el tiempo, esto permite que la red neuronal aprenda patrones complejos en los datos y genere predicciones más precisas.</p>
                 <p>El Backpropagation es como el maestro que guía a la red neuronal para que mejore con cada intento. A través de ajustes sistemáticos en los pesos y sesgos, la red aprende a hacer predicciones más precisas y a capturar relaciones importantes en los datos, lo que la convierte en una herramienta poderosa para tareas como reconocimiento de patrones, clasificación y más.</p>
                 <p>Imagina enseñar a un perro nuevos trucos. Comienzas recompensándolo cuando hace algo bien y corriges cuando se equivoca. Backpropagation hace algo similar. Al calcular la diferencia entre las predicciones y las respuestas reales, ajusta los pesos en la red para mejorar el rendimiento en futuras iteraciones.</p>
-                <div class="blog-image-grande">
+                <div class="blog-image-zoom">
                     <img src="media/concepto4.png" alt="">
                 </div>
                 <h2>Desvanecimiento del Gradiente: Problema de Entrenamiento</h2>
@@ -94,7 +94,7 @@
                 </ul>
                 <p>La función de pérdida (Loss Function) es una medida específica que cuantifica la discrepancia entre las predicciones y los valores reales, y se utiliza para ajustar los parámetros del modelo durante el entrenamiento. La Función de Error (Error Function), por otro lado, se refiere más ampliamente a cualquier métrica que evalúa el rendimiento general del modelo. Ambas son esenciales para evaluar y mejorar la eficacia de los modelos de aprendizaje automático y Deep Learning.</p>
                 <p>La función de pérdida es como un juez que evalúa cuán cerca estás de tu objetivo en un juego. El juego podría ser predecir el precio de una casa en función de su tamaño y ubicación. La función de pérdida mide cuánto te desvías del precio real, y la función de error es la suma total de esas desviaciones.</p>
-                <div class="blog-image-grande">
+                <div class="blog-image-zoom">
                     <img src="media/concepto6.png" alt="">
                 </div>
                 <h2>Selección de Características y Reducción de Dimensiones</h2>
@@ -105,7 +105,7 @@
                     <li><marcador class="resaltado8">Reducción de Dimensiones:</marcador> La reducción de dimensiones es un enfoque más avanzado que busca transformar los datos originales en un nuevo espacio de menor dimensión mientras se conserva la mayor cantidad posible de información relevante. Esto es especialmente útil cuando se enfrenta a conjuntos de datos con muchas características, ya que la alta dimensionalidad puede llevar a problemas de "maldición de la dimensionalidad" y dificultar el procesamiento y la interpretación.</li>
                     <p>Una técnica común para reducir la dimensión es el Análisis de Componentes Principales (PCA, por sus siglas en inglés), que busca proyectar los datos originales en un nuevo conjunto de ejes ortogonales (componentes principales) que capturan la mayor variabilidad. Otras técnicas, como el Análisis Discriminante Lineal (LDA) o métodos de factorización de matriz, también se utilizan para reducir la dimensión y preservar las relaciones relevantes en los datos.</p>
                 </ul>
-                <div class="blog-image-grande">
+                <div class="blog-image-zoom">
                     <img src="media/concepto7.png" alt="">
                 </div>
                 <p>Tanto la selección de características como la reducción de dimensiones tienen como objetivo mejorar la calidad de los datos utilizados para el aprendizaje automático y la minería de datos. La selección de características se centra en la elección de las características más relevantes, mientras que la reducción de dimensiones busca representar los datos en un espacio de menor dimensión para facilitar el procesamiento y la interpretación. Ambas técnicas son herramientas valiosas para abordar desafíos asociados con la complejidad y la cantidad de datos en la actualidad.</p>
@@ -147,7 +147,7 @@
                 </ul>
                 <br>
                 <p>Estos algoritmos son como estrategias para bajar una montaña nebulosa (función de pérdida) de manera eficiente, ajustando los pasos y las velocidades en función de lo que se ha experimentado previamente. Cada uno tiene su propia forma de adaptarse al terreno y moverse hacia el mínimo global de la función de pérdida, que es donde queremos llegar para entrenar modelos de aprendizaje automático de manera efectiva.</p>
-                <div class="blog-image-grande">
+                <div class="blog-image-zoom">
                     <img src="media/concepto8.jpg" alt="">
                 </div>
                 <div class="blog-image-grande">
