--- a/network/arp.html
+++ b/network/arp.html
@@ -57,7 +57,7 @@
                     <li><marcador class="resaltado9">Actualización de la tabla ARP:</marcador> Cuando el dispositivo emisor recibe la respuesta ARP, actualiza su tabla ARP con la dirección MAC correspondiente a la dirección IP destino. Esta tabla ARP es una tabla de caché que almacena las asociaciones entre direcciones IP y direcciones MAC para agilizar futuras comunicaciones.</li>
                 </ol>
                 <p>Es importante mencionar que las tablas ARP tienen una duración limitada. Esto se debe a que las direcciones IP pueden cambiar con el tiempo debido a reconfiguraciones de red o movimientos de dispositivos. Cuando una entrada en la tabla ARP expira, el dispositivo debe repetir el proceso ARP para actualizar la información.</p>
-                <div class="blog-image-grande">
+                <div class="blog-image-zoom">
                     <img src="media/protocolo7.png" alt="">
                 </div>                
                 <h2>Ejemplo de ARP</h2>
@@ -118,7 +118,7 @@
                 <p><marcador class="resaltado5">ARP MiTM (Man-in-the-Middle):</marcador> En este escenario, el atacante intercepta el tráfico entre dos dispositivos legítimos. Esto se logra al enviar mensajes ARP falsificados a ambas partes, lo que hace que crean que están comunicándose directamente entre sí mientras el atacante actúa como intermediario.</p>
                 <p><marcador class="resaltado5">ARP Hijacking:</marcador> En lugar de interceptar el tráfico, un atacante puede reemplazar la dirección MAC de una máquina legítima en la tabla ARP de un dispositivo objetivo con su propia dirección MAC. Esto permite al atacante recibir el tráfico destinado a la máquina legítima.</p>
                 <p><marcador class="resaltado5">ARP-Based VLAN Hopping:</marcador> En este ataque, el atacante manipula las tablas ARP para moverse entre VLANs a las que normalmente no tendría acceso, lo que puede exponer segmentos de red sensibles.</p>   
-                <div class="blog-image-grande">
+                <div class="blog-image-zoom">
                     <img src="media/protocolo6.jpg" alt="">
                 </div>
             </div>
