--- a/network/icmp.html
+++ b/network/icmp.html
@@ -50,7 +50,7 @@
                     <li>El Host B recibe el paquete y responde con un paquete ICMP de respuesta de eco.</li>
                     <li>El Host A recibe la respuesta y calcula el tiempo transcurrido entre el envío y la recepción.</li>
                 </ol>
-                <div class="blog-image-grande">
+                <div class="blog-image-mediana">
                     <img src="media/protocolos.png" alt="">
                 </div>
                 <h2>Encabezado ICMP y Códigos</h2>
