--- a/hacking/archivos.html
+++ b/hacking/archivos.html
@@ -59,7 +59,7 @@
                     <li><marcador class="resaltado1">/sys/class/dmi/id/product_name</marcador></li>
                     <p>Este archivo identifica el tipo de máquina en la que se está ejecutando Linux.</p>
                     <li><marcador class="resaltado1">/etc/os-release</marcador></li>
-                    <p>Este comando proporcionará información detallada sobre la distribución, incluyendo su nombre y versión.</p>
+                    <p>Este archivo proporciona información detallada sobre la distribución, incluyendo su nombre y versión.</p>
                     <li><marcador class="resaltado1">/sys/class/dmi/id/sys_vendor</marcador></li>
                     <p>Proporciona información sobre la marca que distribuye la máquina.</p>
                     <li><marcador class="resaltado1">/sys/class/dmi/id/bios_vendor</marcador></li>
