--- a/hacking/linux.html
+++ b/hacking/linux.html
@@ -597,7 +597,7 @@
 
                 <div class="contenedor">
                   <div class="etiqueta">
-                    Este comando se utiliza para realizar una solicitud HTTP GET a una URL y recuperar datos de una web. La opción <marcador class="resaltado4">-s</marcador> significa "silent" o "quiet", lo que suprime la salida adicional y muestra solo el contenido descargado.
+                    Este comando se utiliza para realizar una solicitud HTTP GET a una URL y recuperar los datos de una web. La opción <marcador class="resaltado4">-s</marcador> significa "silent" o "quiet", lo que suprime la salida adicional.
                   </div>
                   <div class="comandos">
                     <input type="text" class="text" value="curl -s -X GET https://ejemplo.com/pagina.html" oninput="ajustarAncho(this)">
