--- a/hacking/anonimato.html
+++ b/hacking/anonimato.html
@@ -237,7 +237,7 @@ socks5          127.0.0.1 1080
                 <p>Por ejemplo:</p>
                 <p><marcador class="resaltado5">socks5 127.0.0.1 9050</marcador> o <marcador class="resaltado5">http 192.168.1.1 8080</marcador></p>
                 <p>En el sitio web "hidemy.io" ofrecen servicios de proxy que permiten a los usuarios navegar de forma anónima y acceder a contenido restringido en Internet. Proporciona una lista de proxies disponibles que los usuarios pueden utilizar para enmascarar su dirección IP y proteger su privacidad en línea. Además de ofrecer servicios de proxy, el sitio web también proporciona información detallada sobre el tipo de proxy, su velocidad y su país de origen, lo que permite a los usuarios seleccionar un proxy adecuado según sus necesidades específicas de navegación.</p>
-                <p>Para acceder a la lista de proxies, haz clic <a href="https://hidemy.io/es/proxy-list/">aquí</a>. Asegúrate de seguir la estructura de <strong>[Protocolo]</strong>, <em>[IP]</em> y <em>[Puerto]</em>.</p></p>
+                <p>Para acceder a la lista de proxies, haz clic <a href="https://hidemy.io/es/proxy-list/">aquí</a>. Asegúrate de seguir la estructura de <em>[Protocolo]</em>, <em>[IP]</em> y <em>[Puerto]</em>.</p></p>
                 <p>Guarda y cierra el archivo de configuración.</p>
                 <p>Después de configurar los proxies, puedes usar ProxyChains para ejecutar una aplicación a través de un proxy. Por ejemplo, si quieres ejecutar el navegador Firefox a través del proxy, puedes usar el siguiente comando: <marcador class="subrayado">proxychains firefox</marcador>.</p>
                 <p>Esto iniciará el navegador Firefox y todo el tráfico de red de Firefox pasará a través del proxy configurado en ProxyChains.</p>
