--- a/hacking/archivos.html
+++ b/hacking/archivos.html
@@ -83,7 +83,7 @@
                     <p>Proporciona información sobre sistemas de archivos montados actualmente en el sistema.</p>
                     <li><marcador class="resaltado1">/etc/fstab</marcador></li>
                     <p>Define las particiones y sistemas de archivos montados automáticamente durante el inicio, lo que puede revelar información sobre el almacenamiento y la estructura del sistema.</p>
-                    <li><marcador class="resaltado1">/etc/crontab</marcador></li>
+                    <li><marcador class="resaltado1">/etc/crontab</marcador> y <marcador class="resaltado1">/var/spool/cron/crontabs</marcador></li>
                     <p>Contiene las tareas programadas en el sistema, lo que podría revelar información sobre la automatización de tareas.</p>
                     <li><marcador class="resaltado1">/etc/hostname</marcador></li>
                     <p>Almacena el nombre del host del sistema, que puede utilizarse para identificar un servidor en la red.</p>
