--- a/hacking/archivos.html
+++ b/hacking/archivos.html
@@ -164,6 +164,8 @@
                 <ul>
                     <li><marcador class="resaltado1">/etc/apache2/apache2.conf</marcador></li>
                     <p>Configuración principal de Apache.</p>
+                    <li><marcador class="resaltado1">/etc/apache2/sites-enabled/000-default.conf</marcador></li>
+                    <p>Configuración principal del sitio web.</p>
                     <li><marcador class="resaltado1">/etc/apache2/sites-available/</marcador></li>
                     <p>Directorio de configuraciones de sitios virtuales.</p>
                     <li><marcador class="resaltado1">/etc/apache2/mods-available/</marcador></li>
