--- a/hacking/windows.html
+++ b/hacking/windows.html
@@ -443,6 +443,18 @@
                     </div>
                   </div>
 
+                  reg query HKLM\Software\MedDigi	
+                  <div class="contenedor">
+                    <div class="etiqueta">
+                        Muestra el contenido de un registro.
+                    </div>
+                    <div class="comandos">
+                      <input type="text" class="text" value="reg query HKLM\Software\Programa" oninput="ajustarAncho(this)">
+                      <button><i class="fa fa-clone"></i><span> Copy</span></button>
+                    </div>
+                  </div>
+
+
                   <div class="contenedor">
                     <div class="etiqueta">
                         Una herramienta de línea de comandos para gestionar discos y particiones.
