--- a/network.html
+++ b/network.html
@@ -91,6 +91,10 @@
             <h2><a href="network/red.html">Dispositivos de Red</a></h2>
         </div>
         <div class="article-section">
+            <img src="media/imagen2.png" alt="Comandos Básicos en Dispositivos de Red" class="article-image">
+            <h2><a href="network/comandos.html">Comandos Básicos en Dispositivos de Red</a></h2>
+        </div>
+        <div class="article-section">
             <img src="media/imagen2.png" alt="DHCP" class="article-image">
             <h2><a href="network/dhcp.html">DHCP</a></h2>
         </div>   
