--- a/ia.html
+++ b/ia.html
@@ -62,6 +62,10 @@
             <img src="media/imagen3.png" alt="Transformers" class="article-image">
             <h2><a href="ia/transformers.html">Transformers</a></h2>
         </div> 
+        <div class="article-section">
+            <img src="media/imagen3.png" alt="Pandas" class="article-image">
+            <h2><a href="ia/pandas.html">Pandas</a></h2>
+        </div>
         <!-- Nuevo artículo -->
         <div class="article-section">
             <img src="media/imagen3.png" alt="En proceso" class="article-image">
